--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><title>Dichen Li - CV</title></head>
+<head><meta charset="utf-8"><title>Dichen Li – CV</title></head>
 <body>
   <h1>Dichen Li</h1>
-  <p><a href="CV-DichenLi.pdf">Download my CV (PDF)</a></p>
-  <iframe src="CV-DichenLi.pdf" width="100%" height="800px"></iframe>
+  <p><a href="cv.pdf">Download CV (PDF)</a></p>
+  <iframe src="cv.pdf" width="100%" height="900"></iframe>
 </body>
 </html>
